force-app/main/default/objects/MuleSoft_API_Callout__mdt/MuleSoft_API_Callout__mdt.object-meta.xml
<CustomObject>
    <label>MuleSoft API Callout</label>
    <pluralLabel>MuleSoft_API_Callouts</pluralLabel>
</CustomObject>