force-app/main/default/objects/MuleSoft_API_Callout__mdt/fields/ClientId__c.field-meta.xml
<CustomField>
    <fullName>ClientId__c</fullName>
    <label>ClientId</label>
    <length>225</length>
    <type>Text</type>
</CustomField>