force-app/main/default/objects/MuleSoft_API_Callout__mdt/fields/ClientSecret__c.field-meta.xml
<CustomField>
    <fullName>ClientSecret__c</fullName>
    <label>ClientSecret</label>
    <length>225</length>
    <type>Text</type>
</CustomField>