force-app/main/default/objects/MuleSoft_API_Callout__mdt/fields/ContentType__c.field-meta.xml
<CustomField>
    <fullName>ContentType__c</fullName>
    <label>ContentType</label>
    <length>50</length>
    <type>Text</type>
</CustomField>