force-app/main/default/objects/MuleSoft_API_Callout__mdt/fields/Endpoint__c.field-meta.xml
<CustomField>
    <fullName>Endpoint__c</fullName>
    <label>Endpoint</label>
    <length>225</length>
    <type>Text</type>
</CustomField>