force-app/main/default/objects/MuleSoft_API_Callout__mdt/fields/Method__c.field-meta.xml
<CustomField>
    <fullName>Method__c</fullName>
    <label>Method</label>
    <length>50</length>
    <type>Text</type>
</CustomField>