force-app/main/default/objects/MuleSoft_API_Callout__mdt/fields/SoapAction__c.field-meta.xml
<CustomField>
    <fullName>SoapAction__c</fullName>
    <label>SoapAction</label>
    <length>225</length>
    <type>Text</type>
</CustomField>