force-app/main/default/objects/MuleSoft_API_Callout__mdt/listViews/All_details.listView-meta.xml
<ListView>
    <fullName>All_details</fullName>
    <columns>Endpoint__c</columns>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>ClientId__c</columns>
    <columns>ContentType__c</columns>
    <columns>Method__c</columns>
    <columns>SoapAction__c</columns>
    <columns>Timeout__c</columns>
    <filterScope>Everything</filterScope>
    <label>All details</label>
    <language>en_US</language>
</ListView>